test/integration/invalid-href/pages/index.js
// page used for loading and installing error catcher
export default () => <p>Hi 👋</p>
